# docs/swagger.json
@@ -60,30 +60,12 @@
                 "summary": "create a new blogPost",
                 "parameters": [
                     {
-                        "description": "Title",
-                        "name": "title",
+                        "description": "BlogPost",
+                        "name": "blogPost",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "type": "string"
-                        }
-                    },
-                    {
-                        "description": "Description",
-                        "name": "description",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    {
-                        "description": "Body",
-                        "name": "body",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/models.CreateBlogPostSchema"
                         }
                     }
                 ],
@@ -110,30 +92,12 @@
                 "summary": "update blogPost",
                 "parameters": [
                     {
-                        "description": "BlogPost ID",
-                        "name": "id",
+                        "description": "BlogPost",
+                        "name": "blogPost",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "type": "string"
-                        }
-                    },
-                    {
-                        "description": "Description",
-                        "name": "description",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    {
-                        "description": "Body",
-                        "name": "body",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/models.CreateBlogPostSchema"
                         }
                     }
                 ],
@@ -227,6 +191,25 @@
                     "type": "string"
                 },
                 "updatedAt": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.CreateBlogPostSchema": {
+            "type": "object",
+            "required": [
+                "body",
+                "description",
+                "title"
+            ],
+            "properties": {
+                "body": {
+                    "type": "string"
+                },
+                "description": {
+                    "type": "string"
+                },
+                "title": {
                     "type": "string"
                 }
             }
